--- a/vkify.user.css
+++ b/vkify.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           VKify
 @namespace      https://github.com/openstyles/stylus
-@version        1.5
+@version        1.5.1
 @description    sosiski
 @author         koke228
 @homepageURL    https://github.com/koke228666/VKify
@@ -577,7 +577,7 @@ background-position: -108px -52px !important;
 }
 
 .headerMusicBtn.paused {
-  background-position: -24px 0 !important;
+  background-position: 0 0 !important;
 }
 
 .headerMusicBtn.paused:hover {
