--- a/vkify.user.css
+++ b/vkify.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           VKify
 @namespace      https://github.com/openstyles/stylus
-@version        1.6
+@version        1.6.1
 @description    sosiski
 @author         koke228
 @homepageURL    https://github.com/koke228666/VKify
@@ -632,6 +632,7 @@ body, h4 {
  font-size: 11px;
  overflow-y: auto;
  max-height: 300px;
+ height: 300px;
 }
 .bigPlayer .playButtons .nextButton, .bigPlayer .playButtons .backButton {
   opacity: 0.83;
