--- a/smithereen-edition/smithereen-blue.user.css
+++ b/smithereen-edition/smithereen-blue.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Smithereen Blue
 @namespace      github.com/openstyles/stylus
-@version        1.1.1
+@version        1.1.2
 @description    синий смизерин
 @author         koke228
 ==/UserStyle== */
@@ -169,6 +169,8 @@
     .pvLayer .layerTitle .title {
      color:#45668E;
     }
+    
+    
 
     /* пагинатор */
     .summaryWrap .pagination .curPage {
@@ -212,7 +214,17 @@
     .secondaryTabBar a:hover {
       background:#E1E7ED;
     }
-
+    @keyframes highlight {
+     0%,
+     to {
+      background-color:hsla(56,42%,86%,0)
+     }
+     3%,
+     50% {
+      background-color:#eae8cb
+     }
+    }
+    
     /* лоадер */
     .ajaxReplaceWithLoader.ajaxLoading:before,
     .inlineLoader,
@@ -670,6 +682,28 @@
     .postLayerCommentForm {
         background-color: #f2f2f2;
     }
+    .comment>div {
+     border-top:1px solid #dbdce0;
+     padding-top:5px
+    }
+    @keyframes highlight {
+     0%,
+     to {
+      background-color:hsla(56,42%,86%,0)
+     }
+     3%,
+     50% {
+      background-color:#d9e1ea;
+     }
+    }
+    .secondaryTabBar {
+     background:#EFF1F3;
+     border-bottom:1px solid #DBE0EA;
+     display:flex;
+     flex-wrap:wrap;
+     padding:13px 10px 12px
+    }
+
     /* почта (личные сообщения) */
     .mailMessageRow .text {
       color:#67829E;
@@ -834,5 +868,21 @@
      opacity:.7;
      transition:opacity .2s ease;
      width:21px
+    }
+    
+    /* айфрейм */
+    /* лайки, комментарии и репосты */
+    #content .metricsW .metrics .icon {
+      background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='11' height='33' fill='%23c9d8e6'%3E%3Cpath d='M4 29.995V33l3.3-3.005h2.325c.759 0 1.375-.616 1.375-1.375v-5.245C11 22.616 10.384 22 9.625 22h-8.25C.616 22 0 22.616 0 23.375v5.245c0 .759.616 1.375 1.375 1.375zM5.5 2.76C5.51 1.235 6.738 0 8.25 0 9.768 0 11 1.245 11 2.778 11 6.204 5.5 10 5.5 10S0 6.204 0 2.778V2.76C.01 1.235 1.238 0 2.75 0 4.268 0 5.5 1.245 5.5 2.778zM7.45 14C8.495 11.835 11 11 11 11v10s-2.505-.835-3.55-3H5v3.5a.5.5 0 0 1-.5.5H4a1 1 0 0 1-1-1v-2a1 1 0 0 0-.994-1H1a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1z'/%3E%3C/svg%3E") no-repeat;
+      display: inline-block;
+      height: 11px;
+      margin-right: 5px;
+      position: relative;
+      top: 2px;
+      width: 11px;
+    }
+    #content .metricsW .metrics {
+      color: #7295b2;
+      font-weight: 700;
     }
 }
